# fakos

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/actions/update-homebrew/: action.yml  fakos.rb.tpl  update-homebrew-formula.sh
.github/workflows/: release.yml
.krew/: fakos.yaml  fakos.yml
src/: lib.rs  main.rs
src/cli/: commands.rs  formats.rs  mod.rs
src/k8s/: mod.rs
src/utils/: logging.rs  mod.rs
