[package]
name = "fakos"
version = "0.0.0"
authors = ["Ali Abbas Jaffri <ali.abbasjaffri@live.com>"]
description = "fakos enables users to efficiently access the state and metadata of all Kubernetes resources"
keywords = ["k8s", "pods", "nodes", "daemonsets", "deployments", "state", "metadata"]
repository = "https://github.com/koithos/fakos"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
