[package]
name = "fakos"
version = "0.0.1"
authors = ["Ali Abbas Jaffri <ali.abbasjaffri@live.com>"]
description = "fakos enables users to efficiently access the state and metadata of all Kubernetes resources"
keywords = ["k8s", "pods", "nodes", "daemonsets", "deployments", "state", "metadata"]
repository = "https://github.com/koithos/fakos"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
k8s-openapi = { version = "0.26", features = ["v1_32"] }
kube = { version = "2.0", features = ["runtime"] }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
colored = "3.0"
prettytable-rs = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "chrono"] }
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"
