[package]
name = "fakos"
version = "0.0.2"
authors = ["Ali Abbas Jaffri <ali.abbasjaffri@live.com>"]
description = "fakos enables users to efficiently access the state and metadata of all Kubernetes resources"
keywords = ["k8s", "pods", "nodes", "state", "metadata"]
repository = "https://github.com/koithos/fakos"
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.90"

[dependencies]
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context", "color"] }
k8s-openapi = { version = "0.26", default-features = false, features = ["v1_32"] }
kube = { version = "2.0", default-features = false, features = ["client", "rustls-tls"] }
tokio = { version = "1.48", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
anyhow = "1.0"
colored = "3.0"
prettytable-rs = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["json", "env-filter", "chrono", "ansi"] }
thiserror = "2.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14"

[profile.release]
opt-level = "z"        # or "s" (slightly faster, slightly larger)
lto = true             # link-time optimization
codegen-units = 1      # better optimization across crate boundaries
panic = "abort"        # removes unwinding machinery
strip = true
debug = false
